--- a/samsung/a05s/recovery/root/init.recovery.qcom.rc
+++ b/samsung/a05s/recovery/root/init.recovery.qcom.rc
@@ -40,3 +40,7 @@ on property:ro.boot.usbcontroller=*
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+    # Mount firmware
+    mkdir /vendor/firmware_mnt
+    mount vfat /dev/block/bootdevice/by-name/apnhlos /vendor/firmware_mnt ro
+    export ANDROID_ROOT /system_root
